--- a/app/public/mix-manifest.json
+++ b/app/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/script.js": "/js/script.js"
+    "/js/app.js": "/js/app.js?id=50cd8e00bcfbe270eb21",
+    "/css/app.css": "/css/app.css?id=bf172edf2dc0d5698f4d",
+    "/js/script.js": "/js/script.js?id=d0877c5bdbd1c3779b8d"
 }
