--- a/app/package.json
+++ b/app/package.json
@@ -23,5 +23,9 @@
         "vue": "^2.6.12",
         "vue-router": "^3.5.1",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vee-validate": "^3.4.5",
+        "vue-validator": "^3.0.0-alpha.2"
     }
 }
