--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
         "sass": "^1.20.1",
         "sass-loader": "^7.3.1",
         "vue": "^2.6.12",
+        "vue-notification": "^1.3.20",
         "vue-router": "^3.5.1",
         "vue-template-compiler": "^2.6.10"
     },
